packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_make_component_jsx_split_with_bind.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5398
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const Cmp = Math.random() >= 0.5 ? 'button' : 'input'
  const sig = useSignal(0)
  return (
    <div>
      <Cmp bind:value={sig} />
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,6BAAe,8CAQZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = ()=>{
    const Cmp = Math.random() >= 0.5 ? 'button' : 'input';
    const sig = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSplit(Cmp, null, {
        "bind:value": sig
    }, null, 3, "u6_0"), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;0CAG0B;IACxB,MAAM,MAAM,KAAK,MAAM,MAAM,MAAM,WAAW;IAC9C,MAAM,MAAM,UAAU;IACtB,qBACE,WAAC,iCACC,UAAC;QAAD,cAAiB;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    245
  ]
}
*/
== DIAGNOSTICS ==

[]
